# streamlit-ui-integrated-ai-prj

./: .gitignore  README.md  app.py  chatbot.py  main.py  pyproject.toml  requirements.txt  research_agent.py  roundtable.py  ui.py  user_db.csv  user_management.py  vector_search.py
vector_dbs/: faiss_metadata.json
vector_dbs/lancedb/__manifest/_transactions/: 0-d0b1dabb-3530-453b-8963-cc359910f65e.txn
vector_dbs/lancedb/document_chunks.lance/_transactions/: 0-9817570d-76e6-44d1-8055-01bab05d5080.txn  1-0503f3fa-afbf-449f-8b2c-5f50fd693108.txn
